2010-05-26  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp: update all names to v2 using <pariold.h>
	(pari-pi): remove DEFINE-SYMBOL-MACRO to avoid shadowing a foreign var
	(pari-sign-raw): fix for 64-bit negatives
	(convert-to-pari): NIL->NIL
	(VERYBIGINT, BIGINT): add
	(get-varno): use BIGINT instead of 256 to check validity

2010-05-26  Arseny Slobodyuk  <ampy@users.sourceforge.net>

	* modules/syscalls/calls.c [WIN32_NATIVE || UNIX_CYGWIN32]
	(OS::%SET-CLIPBOARD): behave according to setf logic: return
	the value given. Raise a lisp error on failure.
	Do not try to use unicode when it is not a unicode build.
	(OS:CLIPBOARD): The same unicode guarding ifdefs.
	Expect blocking behaviour of GetClipboardData.

2010-05-25  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-get-real-prec-raw)
	(pari-real-precision, pari-get-real-prec-digits): remove
	(pari-call-out-prec): use (EXT:LONG-FLOAT-DIGITS)
	instead of (PARI-GET-REAL-PREC-RAW) as the default PREC value

2010-05-25  Sam Steingold  <sds@gnu.org>

	* modules/pari/pari.lisp (pari-byte): add
	(SIGNBITS, SIGNSHIFT, TYPBITS, TYPSHIFT, LGBITS, EXPOBITS)
	(HIGHEXPOBIT, VALPBITS, HIGHVALPBIT, PRECPBITS, PRECPSHIFT)
	(VARNBITS, VARNSHIFT, CLONEBIT): define using DEF-C-CONST
	(pari-sign-byte, pari-type-byte, pari-length-byte)
	(pari-exponent-byte, pari-valuation-byte, pari-precision-byte)
	(pari-varno-byte): define using PARI-BYTE
	(LGEFBITS): remove (gone from PARI)
	(pari-effective-length-byte, pari-effective-length-raw): remove
	(pari-mantissa-eff, pari-mant): remove
	(pari-mantissa, pari-set-component, pari-make-object):
	fix (use a single WITH-C-VAR, shift using (sizeof 'c-pointer))
	(convert-to-pari@integer, convert-to-pari@pari-poly):
	use PARI-LENGTH-BYTE instead of PARI-EFFECTIVE-LENGTH-BYTE
	(convert-from-pari-1, convert-from-pari-10):
	use PARI-MANTISSA instead of PARI-MANTISSA-EFF

2010-05-25  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp (DEF-C-CONST): move checking whether we are