@@ -2042,21 +2042,21 @@
 (defmethod convert-to-pari ((x integer))
   (let* ((sign (signum x))
          (val (abs x))
-	 (len (ceiling (integer-length val) 32))
+	 (len (ceiling (integer-length val) #,(bitsizeof 'ulong)))
 	 (vec (make-array (1+ len))))
     (setf (svref vec 0)
           (dpb sign pari-sign-byte
 	       (dpb (+ len 2) pari-length-byte 0)))
     (do ((i len (1- i))
-         (y val (ash y -32)))
+         (y val (ash y #,(- (bitsizeof 'ulong)))))
         ((eql i 0))
-      (setf (svref vec i) (logand y #xFFFFFFFF)))
+      (setf (svref vec i) (logand y #,(1- (ash 1 (bitsizeof 'ulong))))))
     (pari-make-object vec 1)))
 
 (defun collect-mantissa (mantissa)
   (let ((result 0))
     (dotimes (i (length mantissa) result)
-      (setq result (+ (ash result 32) (svref mantissa i))))))
+      (setq result (+ (ash result #,(bitsizeof 'ulong)) (svref mantissa i))))))
 
 (defun convert-from-pari-1 (ptr)
   (* (pari-sign-raw ptr) (collect-mantissa (pari-mantissa ptr))))
