@@ -6,6 +6,8 @@
 	(convert-to-pari): NIL->NIL
 	(VERYBIGINT, BIGINT): add
 	(get-varno): use BIGINT instead of 256 to check validity
+	(convert-to-pari@integer, collect-mantissa):
+	use (BITSIZEOF 'ULONG) instead of a literal 32
 
 2010-05-26  Arseny Slobodyuk  <ampy@users.sourceforge.net>
 
